# fast_python_api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  description.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
db_data/base/1/: 2619  pg_internal.init
db_data/base/16384/: 1247  1249  1259  16389  16392  16411  16419  16425  16428  2224  2579  2604  2606  2608  2610  2619  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  pg_internal.init
db_data/base/4/: 2619
db_data/base/5/: pg_internal.init
db_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
db_data/pg_stat/: pgstat.stat
fast_python_api/: database.py  logging_config.py  loging_config.py  main.py  models.py  routes.py  settings.py
fast_python_api/auth/: hashing.py  routes.py  token.py  user.py  user_auth.py
fast_python_api/chemas/: base.py  params.py  token.py  user.py  user_crud.py  user_db.py
fast_python_api/core/: routes.py  user_crud.py  user_db.py
fast_python_api/script/: init_user.py
fast_python_api/services/: extermal_api.py  http.py  routes.py  utils.py
migrations/: env.py
migrations/versions/: 20a23c2363af_.py  266c8ba580f1_initial_migration.py  57eca85f8ec6_.py  62702390a767_.py  6e70038e783b_.py  cc4314b56766_.py  da68540e1b7a_.py  f0332e119756_.py  f3da9db8b451_.py  ffa08c559168_.py
tests/: conftest.py  test_create.py  test_delete_user.py  test_load_data.py  test_main.py  test_read.py  test_token.py  test_update.py
tests/fixtures/: service_response.json
tests/fixturex/: users_dump.json
